--- a/css/wechat/index/home.css
+++ b/css/wechat/index/home.css
@@ -1,33 +1,33 @@
 
-#tasks {
+.tasks {
     padding-left: 3%;
     padding-right: 3%;
     margin-bottom: 10px;
 }
 
-#tasks .task {
+.tasks .task {
     width: 45%;
     margin-top: 5px;
     border: solid 1px #333;
 }
 
-#tasks .task:nth-child(odd) { 
+.tasks .task:nth-child(odd) { 
     margin-right: 2%;
 }
 
-#tasks .task-cover {
+.tasks .task-cover {
     width: 100%;
 }
 
-#tasks .task-cover img {
+.tasks .task-cover img {
     width: 100%;
     max-height: 100px;
 }
 
-#tasks .task-title {
+.tasks .task-title {
 }
 
-#tasks .task-type {
+.tasks .task-type {
 }
 
 #task-info {
