添加 wechat/index/sheet 判断照片为横版或竖版功能

--- a/css/wechat/index/sheet.css
+++ b/css/wechat/index/sheet.css
@@ -32,8 +32,9 @@
 }
 
 .card_img {
-  max-height: 100%;
-  /*max-width: 100%;*/
+  /* 现在在生成card时候判断 */
+  /* 横版照片 max-height: 100%; */
+  /* 竖版照片 max-width: 100%; */
 }
 
 .card_footer {
