--- a/css/wechat/index/home.css
+++ b/css/wechat/index/home.css
@@ -1,3 +1,10 @@
+.wx_headimg {
+  width: 100px;
+  height: 100px;
+}
+
+.locinfo {
+}
 
 .tasks {
     padding-left: 3%;
@@ -52,5 +59,14 @@
     max-height: 200px;
 }
 
+
+#log {
+    width: 100%;
+    display: none;
+}
+
+#goback {
+    margin-top: 5px;
+}
 
 
