审核页重排版。
Change-Id: I25469009a40333b7560a35e7a342c8581b7deb7f

--- a/css/main.css
+++ b/css/main.css
@@ -38,6 +38,7 @@ body {
 	height: 0;
 }
 
+.clear-me { clear: both; }
 
 .item-table { }
 .item-table-q { width: 25px; }
@@ -204,8 +205,10 @@ img.user-face {
 } 
 
 .flex-row { flex-direction:row; }
-
 .flex-col { flex-direction:column; }
+.flex-rrow { flex-direction: row-reverse; }
+.flex-rcol { flex-direction: col-reverse; }
+
 
 .flex-wrap {
   display: flex;
