--- a/css/admin/sheet/index.css
+++ b/css/admin/sheet/index.css
@@ -31,22 +31,95 @@
 }
 
 .answer-images {
-    width: 800px;
+    width: 820px;
     margin-left: auto;
     margin-right: auto;
     margin-top: 10px;
+
 }
 
-#answer-content img.sheet {
-    width: 100px;
-    height: 200px;
-    border: solid 1px #ccc;
+.answer-thumbnail {
+    width: 200px;
+    border: solid 1px #222;
+    margin-left: 2px;
+    margin-right: 2px;
 }
+
+.answer-thumbnail img.sheet {
+    width: 198px;
+    height: 300px;
+}
+
+.answer-thumbnail .comment {
+    width: 200px;
+    border: 0px;
+}
+
+
+
 
 #answer-content img.map {
     width: 300px;
     height: 200px;
     border: solid 1px #ccc;
+}
+
+#answer-imageview {
+    position: fixed;
+    left: 0px;
+    top: 0px;
+    width: 100%;
+    height: 100%;
+    background-color: #333;
+    z-index: 10002;
+
+    overflow-x:auto;
+    overflow-y:scroll;
+}
+
+.project-info {
+    width: 300px;
+    color: white;
+    word-break:break-all;
+    margin-left: 20px;
+}
+
+.project-info img {
+    width: 100%;
+    height: 50px;
+}
+
+.large-image-wrapper {
+    width: 850px;
+    margin-left: 20px;
+}
+
+.image-locations {
+    margin-left: 20px;
+}
+
+img.map {
+    width: 280px;
+    height: 186px;
+    margin-bottom: 10px;
+}
+
+img.largeView {
+    width: 100%;
+    background-color: black;
+}
+
+button.closeView {
+    width: 30px;
+    height: 30px;
+    line-height: 30px;
+    font-size: 18px;
+}
+
+img.userinfo-avatar {
+    width: 100px;
+    height: 100px;
+    border-radius: 50%;
 }
 
 
