change bgcolor when click pass or reject.
Change-Id: I75c550f994eb03ec0ae1c08c04a901953eff62af

--- a/css/admin/sheet/index.css
+++ b/css/admin/sheet/index.css
@@ -15,7 +15,6 @@
 
 #answer-content {
     position: fixed;
-    background-color: white;
     z-index: 10001;
     top: 0px;
     left: 0px;
@@ -28,6 +27,10 @@
     overflow-y:scroll;
     margin-left: auto;
     margin-right: auto;
+}
+
+.bg-white {
+    background-color: white;
 }
 
 .answer-images {
