--- a/css/wechat/index/home.css
+++ b/css/wechat/index/home.css
@@ -13,9 +13,13 @@
 }
 
 .tasks .task {
-    width: 45%;
+    width: 100%;
     margin-top: 5px;
     border: solid 1px #333;
+}
+
+.tasks table.task .task-cover {
+    width: 45%;
 }
 
 .tasks .task:nth-child(odd) { 
@@ -23,12 +27,16 @@
 }
 
 .tasks .task-cover {
-    width: 100%;
+    width: 50%;
 }
 
 .tasks .task-cover img {
-    width: 100%;
+    width: 95%;
     max-height: 100px;
+}
+
+.tasks .task-brief {
+    width: 50%;
 }
 
 .tasks .task-title {
