--- a/css/admin/investigator/index.css
+++ b/css/admin/investigator/index.css
@@ -9,6 +9,50 @@ img.userinfo-avatar {
     width: 300px;
     margin-left: 2px;
     margin-right: 2px;
+    cursor: pointer;
 }
 
+#user-info-view-background {
+    position: fixed;
+    background-color: #ccc;
+    z-index: 10000;
+    top: 0px;
+    left: 0px;
+    right: 0px;
+    top: 0px;
+    bottom: 0px;
+    width: 100%;
+    height: 100%;
+    filter: alpha(Opacity=50);
+    -moz-opacity: 0.5;
+    opacity: 0.5;
+}
 
+#user-info-view {
+    position: fixed;
+    background-color: white;
+    z-index: 10001;
+    top: 0px;
+    left: 0px;
+    right: 0px;
+    top: 0px;
+    bottom: 0px;
+    width: 850px;
+    height: 100%;
+    overflow-x: auto;
+    overflow-y: auto;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+#user-info-view table {
+    margin-left: 50px;
+    margin-right: 50px;
+    width: 750px;
+}
+
+img.userinfo-avatar {
+    width: 100px;
+    height: 100px;
+    border-radius: 50%;
+}
