--- a/css/wechat/index/sheet.css
+++ b/css/wechat/index/sheet.css
@@ -1,22 +1,43 @@
 .wx_view {
   padding-top: 4%;
-  padding-bottom: 16%;
+  padding-bottom: 10%;
 }
 
-#card_book {
+.card_book {
   min-width: 100vw;
+  flex-wrap: wrap;
+  justify-content: space-between;
 }
 
 .card {
   width: 46vw;
   height: 46vw;
+  margin: 2vw;
   background-color: #fff;
   border: 1px solid transparent;
   border-radius: 2px;
-  -webkit-box-shadow: 0 1px 1px rgba(0, 0, 0, .05);
-  box-shadow: 0 1px 1px rgba(0, 0, 0, .05);
+  -webkit-box-shadow: 2px 2px 4px 0px rgba(0, 0, 0, 0.2);
+  box-shadow: 2px 2px 4px 0px rgba(0, 0, 0, 0.2);
+}
 
-  margin-bottom: 2vw;
+.add_card_btn {
+  display: flex;
+  display: -webkit-flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+
+  width: 46vw;
+  height: 46vw;
+  margin: 2vw;
+  background-color: transparent;
+  border: 4px dashed #bbb;
+  border-radius: 8px;
+  font-size: 16px;
+  font-weight: bolder;
+  color: #bbb;
+  -webkit-box-shadow: 0px 0px rgba(0, 0, 0, 0);
+  box-shadow: 0px 0px rgba(0, 0, 0, 0);
 }
 
 .card_body {
@@ -65,19 +86,12 @@
   background-color: #ddd;
 }
 
-.navbar_bottom {
-  display: flex;
-  display: -webkit-flex;
-  flex-direction: row;
-  justify-content: center;
-  align-items: center;
-
-  color: #666;
-  font-size: 28px;
-  background-color: #eee;
+.bottom_area {
+  min-width: 100vw;
+  margin-top: 10%;
+  justify-content: space-around;
 }
 
-.navbar_bottom:active {
-  color: #222;
-  background-color: #ddd;
+.btn {
+  width: 40vw;
 }
