--- a/css/wechat/index/home.css
+++ b/css/wechat/index/home.css
@@ -1,80 +1,89 @@
-.wx_headimg {
+body {
+    background-color: #f5f5f5;
+}
+
+.userinfo {
+  left: 0px;
+  right: 0px;
+  width: 100px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.userinfo img {
   width: 100px;
   height: 100px;
 }
 
-.locinfo {
+
+#task-wrapper {
+    background-color: #f5f5f5;
 }
 
-.tasks {
-    padding-left: 3%;
-    padding-right: 3%;
-    margin-bottom: 10px;
+.tip {
+    text-align: center;
+    padding-top: 100px;
+    font-size: 1.5em;
+    font-weight: bolder;
 }
 
-.tasks .task {
-    width: 100%;
-    margin-top: 5px;
-    border: solid 1px #333;
+.task {
+    background-color: white;
+    width: 90%;
+    left: 0;
+    right: 0;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 20px;
+    border-radius: 7px;
+    box-shadow: 0 0 5px #ccc;
+    padding: 20px;
 }
 
-.tasks table.task .task-cover {
-    width: 45%;
+.task .task-brief {
 }
 
-.tasks .task:nth-child(odd) { 
-    margin-right: 2%;
-}
-
-.tasks .task-cover {
-    width: 50%;
-}
-
-.tasks .task-cover img {
-    width: 95%;
-    max-height: 100px;
-}
-
-.tasks .task-brief {
-    width: 50%;
-}
-
-.tasks .task-title {
-}
-
-.tasks .task-type {
+.task .task-title {
+    font-size: 1.3em;
+    font-weight: bolder;
 }
 
 #task-info {
-    padding-left: 3%;
-    padding-right: 3%;
-    width: 100%;
-    margin-bottom: 10px;
+    background-color: white;
+    padding: 25px;
 }
 
-#task-info .task {
-    width: 100%;
-    margin-top: 5px;
-    border: solid 1px #333;
+#task-info .task-title {
+    font-size: 2.0em;
+    font-weight: bolder;
 }
 
-#task-info .task-cover {
-    width: 100%;
+#task-info .task-type {
+    font-size: 0.8em;
+}
+
+#task-info .project-title {
+    font-size: 0.8em;
 }
 
 #task-info .task-cover img {
     width: 100%;
-    max-height: 200px;
-}
-
-
-#log {
-    width: 100%;
-    display: none;
-}
-
-#goback {
     margin-top: 5px;
+    margin-bottom: 5px;
 }
+
+#task-info .task-text {
+    text-indent: 29px;
+    margin-bottom: 10px;
+    margin-top: 10px;
+}
+
+#task-info .task-operations {
+    margin-top: 30px;
+}
+
+
+
+
 
 
