--- a/css/admin/task/index.css
+++ b/css/admin/task/index.css
@@ -23,3 +23,14 @@
     vertical-align: top;
     margin-top: 10px;
 }
+
+.investigator_div {
+    display: inline-block;
+    margin: 2px;
+    padding:2px;
+    border-radius: 2px;
+    border: 2px solid white;
+}
+.choosed  {
+    border: 2px solid red;
+}
