--- a/css/wechat/index/sheet.css
+++ b/css/wechat/index/sheet.css
@@ -1,12 +1,29 @@
 .wx_view {
-  padding-top: 4%;
-  padding-bottom: 10%;
+  padding-top: 2vh;
+  padding-bottom: 8vh;
 }
 
-.card_book {
+.card_book_loading {
+    text-align: center;
+    padding-top: 20vh;
+    font-size: 1.5em;
+    font-weight: bolder;
+}
+
+.card_book_page {
   min-width: 100vw;
   flex-wrap: wrap;
   justify-content: space-between;
+}
+
+.card_book_alert {
+  width: 90vw;
+  margin-bottom: 1vh;
+}
+
+.card_book_alert_show {
+  width: 90vw;
+  margin-bottom: 1vh;
 }
 
 .card {
@@ -33,7 +50,7 @@
   background-color: transparent;
   border: 4px dashed #bbb;
   border-radius: 8px;
-  font-size: 16px;
+  font-size: 1em;
   font-weight: bolder;
   color: #bbb;
   -webkit-box-shadow: 0px 0px rgba(0, 0, 0, 0);
@@ -78,7 +95,7 @@
 
 .card_dropdown_btn {
   color: #666;
-  font-size: 16px;
+  font-size: 1em;
   background-color: #eee;
   border: 0px solid transparent;
   border-bottom-right-radius: 2px;
@@ -93,7 +110,7 @@
 
 .card_menu {
   min-width: 50%;
-  font-size: 16px;
+  font-size: 1em;
   text-align: right;
   -webkit-user-select: none;
   user-select: none;
@@ -109,7 +126,7 @@
 }
 
 .fa {
-  font-size: 20px;
+  font-size: 1.5em;
   padding-right: 16px;
 }
 
