--- a/css/wechat/index/home.css
+++ b/css/wechat/index/home.css
@@ -1,13 +1,20 @@
 body {
-    background-color: #f5f5f5;
+  background-color: #f5f5f5;
 }
 
 .userinfo {
-  left: 0px;
-  right: 0px;
-  width: 100px;
-  margin-left: auto;
-  margin-right: auto;
+  width: 100vw;
+  height: 20vh;
+  margin-bottom: 1vh;
+
+  border-bottom: #eee solid 1px;
+
+  background-color: #fff;
+}
+
+.userinfo_headimg {
+  height: 100%;
+  width: 40%;
 }
 
 .userinfo img {
@@ -15,71 +22,103 @@ body {
   height: 100px;
 }
 
+.userinfo_info {
+  height: 100%;
+  width: 60%;
+} 
+
+.userinfo_item {
+  margin: auto;
+}
 
 #task-wrapper {
-    background-color: #f5f5f5;
+  background-color: #f5f5f5;
 }
 
 .tip {
-    text-align: center;
-    padding-top: 100px;
-    font-size: 1.5em;
-    font-weight: bolder;
+  text-align: center;
+  padding-top: 100px;
+  font-size: 1.5em;
+  font-weight: bolder;
+}
+
+.tasks {
+  width: 100vw;
+}
+
+.tasks_tabs {
+  width: 100vw;
+  height: 2.5em;
+  list-style: none;
+
+  border-top: #eee solid 1px;
+  border-bottom: #eee solid 1px;
+  margin: 0px;
+
+  background-color: #fff;
+}
+
+.tasks_tab {
+  padding: 4px 4px 0px 4px;
+}
+
+.tasks_tab.tab_active {
+  color: #337ab7;
+
+  border-bottom: #337ab7 solid 4px;
 }
 
 .task {
-    background-color: white;
-    width: 90%;
-    left: 0;
-    right: 0;
-    margin-left: auto;
-    margin-right: auto;
-    margin-top: 20px;
-    border-radius: 7px;
-    box-shadow: 0 0 5px #ccc;
-    padding: 20px;
+  margin-top: 4px;
+  margin-bottom: 4px;
+  padding: 20px;
+
+  border-top: #eee solid 1px;
+  border-bottom: #eee solid 1px;
+
+  background-color: #fff;
 }
 
 .task .task-brief {
 }
 
 .task .task-title {
-    font-size: 1.3em;
-    font-weight: bolder;
+  font-size: 1.3em;
+  font-weight: bolder;
 }
 
 #task-info {
-    background-color: white;
-    padding: 25px;
+  background-color: white;
+  padding: 25px;
 }
 
 #task-info .task-title {
-    font-size: 2.0em;
-    font-weight: bolder;
+  font-size: 2.0em;
+  font-weight: bolder;
 }
 
 #task-info .task-type {
-    font-size: 0.8em;
+  font-size: 0.8em;
 }
 
 #task-info .project-title {
-    font-size: 0.8em;
+  font-size: 0.8em;
 }
 
 #task-info .task-cover img {
-    width: 100%;
-    margin-top: 5px;
-    margin-bottom: 5px;
+  width: 100%;
+  margin-top: 5px;
+  margin-bottom: 5px;
 }
 
 #task-info .task-text {
-    text-indent: 29px;
-    margin-bottom: 10px;
-    margin-top: 10px;
+  text-indent: 29px;
+  margin-bottom: 10px;
+  margin-top: 10px;
 }
 
 #task-info .task-operations {
-    margin-top: 30px;
+  margin-top: 30px;
 }
 
 
