添加了sheet页面中针对 有试卷 调查结果的预览，去除了吸纳及你

--- a/css/admin/sheet/index.css
+++ b/css/admin/sheet/index.css
@@ -128,3 +128,17 @@ img.userinfo-avatar {
 .sorting_asc, .sorting, .sorting_desc{
     background-image: none !important;
 }
+
+
+
+.question_elf {
+    border-top: 1px solid black;
+    width: 100%;
+    font-size: 15px;
+    
+}
+
+.naire_body, .question_elf, .backbtn ,.submit_btn{
+    padding :15px;
+}
+
