sheet 中 展示关联问题选项

--- a/css/admin/sheet/index.css
+++ b/css/admin/sheet/index.css
@@ -142,3 +142,12 @@ img.userinfo-avatar {
     padding :15px;
 }
 
+.upload_flag {
+    background-color: #faa755;
+    color: white;
+}
+
+.parent_flag {
+    background-color: #426ab3;
+    color: white;
+}
