--- a/css/wechat/index/answer.css
+++ b/css/wechat/index/answer.css
@@ -131,6 +131,7 @@
   border-radius: 2px;
   -webkit-box-shadow: 0 0 5px #ccc;
   box-shadow: 0 0 5px #ccc;
+  display: inline-block;
 }
 
 .add_card_btn {
