变更图片样式和thumbnail效果

--- a/css/admin/sheet/index.css
+++ b/css/admin/sheet/index.css
@@ -48,7 +48,7 @@
     margin-right: 2px;
 }
 
-.answer-thumbnail img.sheet {
+.answer-thumbnail img.sheet ,.photo_thumbnail {
     width: 198px;
     height: 300px;
 }
