提交一轮，查看预览效果

--- a/css/admin/sheet/index.css
+++ b/css/admin/sheet/index.css
@@ -53,6 +53,10 @@
     height: 300px;
 }
 
+.photo_thumbnail {
+    display: inline-block;
+}
+
 .answer-thumbnail .comment {
     width: 200px;
     border: 0px;
